measures of central tendency quiz completed

--- a/index.ipynb
+++ b/index.ipynb
@@ -27,11 +27,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n",
+      "18.0\n",
+      "18\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "import statistics as st\n",
+    "list = (19, 18, 21, 16, 15, 17, 20, 18)\n",
+    "mean = st.mean(list)\n",
+    "print(mean) \n",
+    "median = st.median(list)\n",
+    "print(median)\n",
+    "mode = st.mode(list)\n",
+    "print(mode)\n",
+    "Symmetrical distribution"
    ]
   },
   {
@@ -48,11 +66,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "94.25\n",
+      "97.0\n",
+      "97\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "import statistics as st\n",
+    "list = (100, 99, 97, 97, 96, 98, 95, 72)\n",
+    "mean = st.mean(list)\n",
+    "print(mean) \n",
+    "median = st.median(list)\n",
+    "print(median)\n",
+    "mode = st.mode(list)\n",
+    "print(mode)\n",
+    "#Non-symmetrical distribution - negative skew because mean is lower than median/mode\n"
    ]
   },
   {
@@ -65,11 +101,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your answer here "
+    "number_of_books_sold =[15,18,16]\n",
+    "total_books_for_mean_17 = 17*4\n",
+    "books_to_sell = total_books_for_mean_17 - sum(number_of_books_sold)\n",
+    "print(books_to_sell)"
    ]
   },
   {
@@ -96,7 +143,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "number = 8\n",
+    "print(number)"
    ]
   },
   {
@@ -112,7 +160,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "#10 girls\n",
+    "#19 boys"
    ]
   },
   {
@@ -128,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here "
+    "# 0.5"
    ]
   },
   {
